--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,13 +1,13 @@
 .card {
-    display: flex;
-    flex-direction: column;
-    margin: auto; 
-    width: 300px;
-    overflow: hidden;
+    display:block;
+    background: rgba(0,0,0, .5);
+    margin: 20px;
+    width: 250px;
+    padding: 30px;
+    text-decoration:none;
+    border-radius: 10px;
     box-shadow: 10px 10px 30px rgba(0,0,0,0.5);
-    border-radius: 15px;
     transition: 0.3s ease-in-out;
-    backdrop-filter: blur(5px);
 }
 
 .card:hover {
@@ -17,16 +17,29 @@
 
 .container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
+}
+
+.titulo {
+    margin: 0 0 20px;
+    padding: 0;
+    font-size: 35px;
+    color: #4cc9f0;
+    text-align: center;
+}
+
+.elemento{
+    color:aliceblue;
+    padding: 5px;
 }
 
 .boton {
     background-color: #4b778d;
     width: 30px;
     color: beige;
-    border-radius: 5px;
+    border-radius: 15px;
     align-self: flex-end;
     margin: 3px;
     padding: 2px;
